fix: fix button small padding

--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -56,7 +56,7 @@
     height: 32px;
     border-radius: 24px;
     @include typography.heading-s();
-    padding: 0 24px;
+    padding: 0 18px;
   }
 
   &--large {
